# poseidon

./: .gitignore  .gitmodules  .travis.yml  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  Gopkg.toml  LICENSE  Makefile  OWNERS  README.md  SECURITY_CONTACTS  WORKSPACE  groups  k8s-version  poseidon.go  poseidon_suite_test.go  poseidon_test.go  project.config
Godeps/: Godeps.json
cmake/: BuildOptions.cmake  CXXCompilerConfig.cmake  ExternalDependencies.cmake
cmd/poseidon/: BUILD  poseidon.go
deploy/: Dockerfile  build_docker_image.sh  build_kubernetes.sh  deploy_locally.sh  firmament-deployment-e2e.yaml  firmament-deployment.yaml  heapster-poseidon.yaml  k8s_build_only_amd64.diff  poseidon-deployment-e2e.yaml  poseidon-deployment.yaml  poseidon-nginx-example.yaml  poseidon-scheduler.yaml  poseidon.cfg  run.sh  run_kubernetes.sh
deploy/configs/: cpu_spin.yaml  cpu_spin_1000_pods.yaml  failing_cpu_spin.yaml  nginx-daemon-set.yaml  nginx-deployment.yaml  nginx-replica-set.yaml  nginx.yaml  poseidon_config.json  poseidon_config.yaml
deploy/gang-scheduling/: gang-scheduling.md  gang_schedule_test_case_one.yaml  gang_schedule_test_case_two.yaml
docs/benchmark/: README.md
docs/design/: README.md  gang_scheduling.md  node_affinity_and_selector_for_poseidon.md  node_max-allowed_pods_design.md  pod_affinity_anti-affinity_design.md  taints_and_tolerations_design.md
docs/devel/: README.md
docs/install/: README.md
docs/releases/: 0.1-NOTES.md  0.2-NOTES.md  0.3-NOTES.md  0.4-NOTES.md  0.5-NOTES.md  0.6-NOTES.md  0.7-NOTES.md  0.8-NOTES.md  release-process.md
hack/: .golint_failures  .spelling_failures  dep.py  get-build.sh  ginkgo-e2e.sh  godep-restore.sh  godep-save.sh  poseidon-ginkgo-e2e.sh  release.sh  update-bazel.sh  update-gofmt.sh  verify-bazel.sh  verify-godeps.sh  verify-golint.sh  verify-spelling.sh
hack/e2e-internal/: e2e-down.sh  e2e-status.sh  e2e-up.sh
hack/jenkins/: build-poseidon.sh  test-dockerized.sh
hack/lib/: BUILD  golang.sh  init.sh  util.sh
hack/make-rules/: BUILD  make-help.sh  test-integration.sh  test.sh  verify.sh  verify.sh_fix  vet.sh
image/: Dockerfile  Makefile
pkg/config/: BUILD  config.go
pkg/debugutil/: BUILD  debugutil.go
pkg/firmament/: BUILD  affinity.pb.go  affinity.proto  avoid_pods_annotation.pb.go  avoid_pods_annotation.proto  coco_interference_scores.pb.go  coco_interference_scores.proto  firmament_client.go  firmament_client_test.go  firmament_scheduler.pb.go  firmament_scheduler.proto  firmament_scheduler_mock.go  job_desc.pb.go  job_desc.proto  label.pb.go  label.proto  label_selector.pb.go  label_selector.proto  machine_perf_statistics_sample.pb.go  node_affinity.pb.go  node_affinity.proto  pod_affinity.pb.go  pod_affinity.proto  pod_anti_affinity.pb.go  pod_anti_affinity.proto  reference_desc.pb.go  reference_desc.proto  resource_desc.pb.go  resource_desc.proto  resource_stats.pb.go  resource_stats.proto  resource_topology_node_desc.pb.go  resource_topology_node_desc.proto  resource_vector.pb.go  resource_vector.proto  scheduling_delta.pb.go  scheduling_delta.proto  taints.pb.go  taints.proto  task_desc.pb.go  (+10 more)
pkg/k8sclient/: BUILD  events.go  k8sclient.go  k8sclient_test.go  k8spodwatcher.go  keyed_queue.go  keyed_queue_test.go  nodewatcher.go  nodewatcher_test.go  podwatcher.go  podwatcher_test.go  types.go  utils.go  utils_test.go
pkg/metrics/: BUILD  metrics.go
pkg/mock_firmament/: firmament_mock.go
pkg/poseidonhttp/: BUILD  poseidonhttp.go
pkg/stats/: BUILD  poseidonstats.pb.go  poseidonstats.proto  stats.go  (+2 more)
src/: CMakeLists.txt
src/apiclient/: CMakeLists.txt  demo.cpp  k8s_api_client.cc  k8s_api_client.h  k8s_api_client_test.cc  utils.cc  utils.h
src/firmament/: CMakeLists.txt  Makefile  firmament.go  firmament.swigcxx  knowledge_base_populator.cc  knowledge_base_populator.h  run.sh  scheduler_bridge.cc  scheduler_bridge.h  scheduler_bridge_test.cc  scheduler_integration.cc  test_integration.cc
src/swig-example/: Makefile
test/: OWNERS  e2e-poseidon-gce.sh  e2e-poseidon-local.sh  poseidon_integration_test.go
(+52 files in other folders)
